--- a/UnitTestProject1/packages.config
+++ b/UnitTestProject1/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EFInteractiveViews" version="1.0.1" targetFramework="net452" />
+  <package id="Effort.EF6" version="1.3.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="FluentCommandLineParser" version="1.4.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
-  <package id="SQLite.CodeFirst" version="1.2.4.16" targetFramework="net452" />
+  <package id="NMemory" version="1.1.2" targetFramework="net452" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.104.0" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.104.0" targetFramework="net452" />
   <package id="System.Data.SQLite.EF6" version="1.0.104.0" targetFramework="net452" />
