--- a/UnitTestProject1/App.config
+++ b/UnitTestProject1/App.config
@@ -5,7 +5,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <entityFramework>
-    <defaultConnectionFactory type="Kontur.GameStats.Tests.EffortProviderFactory, Kontur.GameStats.Tests"></defaultConnectionFactory>
+    <defaultConnectionFactory type="Kontur.GameStats.Tests.EffortConnectionFactory, Kontur.GameStats.Tests"></defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
       <provider invariantName="System.Data.SQLite" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
